--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/header.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/header.css
@@ -13,14 +13,14 @@ author: lkemen@nuxeo.com
 .nxHeader .logo { text-align: center; vertical-align: middle; width: 18% }
 .nxHeader .content { padding: 0; line-height: 280%; vertical-align: middle; width: 82%; font-size: 12px }
 .nxHeader .includes { width: 0 }
-.nxHeader a, .nxHeader a:link, .nxHeader a:visited, .nxHeader a:hover, .nxHeader a:active { color: "link.header (__FLAVOR__ color)"; opacity: 0.75; text-shadow: 1px 1px 0 #000; text-decoration: none }
-.nxHeader a:hover, .nxHeader a:active { opacity: 1 }
-.nxHeader .logo a:link, .nxHeader .logo a:hover, .nxHeader .logo a:visited { opacity: 1 }
+.nxHeader a, .nxHeader a:link, .nxHeader a:visited, .nxHeader a:hover, .nxHeader a:active { color: "link.header (__FLAVOR__ color)"; filter:alpha(opacity=75); opacity: 0.75; text-shadow: 1px 1px 0 #000; text-decoration: none }
+.nxHeader a:hover, .nxHeader a:active { filter:alpha(opacity=100); opacity: 1 }
+.nxHeader .logo a:link, .nxHeader .logo a:hover, .nxHeader .logo a:visited { filter:alpha(opacity=100); opacity: 1 }
 
 /* =Search */
 .userSearchBlock { float: right }
 .searchService { opacity: 0.9; margin: 0 1em 0 .5em }
-.searchService .directoryFilter:focus, .searchService:hover { opacity: 1 }
+.searchService .directoryFilter:focus, .searchService:hover { filter:alpha(opacity=100); opacity: 1 }
 .searchService .directoryFilter { border: 1px solid #fff; margin: 0 .3em 0 0 }
 .searchService input.button { margin: .3em .5em 0 .3em; padding: .2em }
 .advancedSearchLink a { font-size: .8em }
@@ -34,7 +34,7 @@ author: lkemen@nuxeo.com
 .mainTabs li { border-right: 1px solid #999; display: inline; float: left }
 .mainTabs a:link, .mainTabs a:visited { color: #fff; display: inline-block; font-size: 1.1em; font-weight: bold; padding: .2em .6em; text-shadow: 1px 1px 0 #000; }
 .mainTabs li.selected, .mainTabs li:hover { background: url("${basePath}/img/white50.png") repeat-x 0 0 transparent } 
-.mainTabs li.selected a, .mainTabs li a:hover, .mainTabs li.selected a:visited { color: white; font-weight: bold; opacity: 1 }
+.mainTabs li.selected a, .mainTabs li a:hover, .mainTabs li.selected a:visited { font-weight: bold; filter:alpha(opacity=100); opacity: 1 }
 
 .userMenuActions {
     color: "gray.light (__FLAVOR__ color)";
