--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/faceted_search.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/faceted_search.css
@@ -23,17 +23,17 @@ author: lkemen@nuxeo.com
   border-width: 1px; border-style: solid none; border-color: "noborder (__FLAVOR__ border)" "noborder (__FLAVOR__ border)" "neutral.light (__FLAVOR__ border)";
   font-weight: bold; margin-bottom: .2em; padding: .3em }
 
-.facetedSearchBlock .labelColumn { font-weight: normal; min-width: 70px }
-.facetedSearchBlock .tinyLabel { display: inline-block; text-align: right; width: 24px }
+.facetedSearchBlock .labelColumn { font-weight: normal; max-width: 66px }
+.facetedSearchBlock .tinyLabel { display: inline-block; min-width: 54px }
 .facetedSearchBlock .dataInput { width: 100% }
 .facetedSearchBlock .dataInput td { padding: .3em .4em .5em 0 }
 .facetedSearchBlock input, .facetedSearchBlock select { width: 95% }
-.facetedSearchBlock input.rich-calendar-input { margin: .1em .3em .1em .5em; width: 63% }
+.facetedSearchBlock input.rich-calendar-input { margin: .1em .3em .1em 0em; width: 50% }
 .facetedSearchBlock .dataInputTextDate { font-size: .9em; margin: 0 .4em .3em .3em; width: 45px }
 .facetedSearchBlock .widgetContent { border-bottom: 1px solid #dcdcdc; color: "gray.dark (__FLAVOR__ color)" }
 
 .facetedSearchBlock h5 {
-  background-color: "neutral.lighter (__FLAVOR__ background)";
+  background-color: "neutral.light (__FLAVOR__ background)";
   border-width: 1px; border-style: solid none;  border-color: "noborder (__FLAVOR__ border)" "neutral.light (__FLAVOR__ border)" "neutral.light (__FLAVOR__ border)";
   color: "default (__FLAVOR__ color)";
   font-size: 1em;
