--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/foldable_boxes.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/foldable_boxes.css
@@ -6,11 +6,10 @@ author: lkemen@nuxeo.com
 */
 
 /* =Default boxes */
-.foldableBox { border-width: 1px; border-style: none none solid; border-color:"neutral.lighter (__FLAVOR__ border)"; font-size: .9em; margin-bottom: 1.8em }
+.foldableBox { border-width: 1px; border-style: solid; border-color:"neutral.lighter (__FLAVOR__ border)"; font-size: .9em; margin-bottom: 1.8em }
 
 .foldableBox h3 {
   background-color: #fff;
-  border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)";
   font-size: 1.1em;
   height: 20px;
   padding: .3em .3em .3em 1.7em }
