--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/footer.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/footer.css
@@ -12,7 +12,7 @@ author: lkemen@nuxeo.com
 .nxFooter .content { text-align: right; width: 100% }
 .nxFooter a {	color: "link.footer (__FLAVOR__ color)" }
 
-.copyrights { color: "gray.medium (__FLAVOR__ color)"; float: right; padding: .2em 2em 0 0 }
+.copyrights { color: "link.footer (__FLAVOR__ color)"; float: right; filter:alpha(opacity=65); opacity: .65; padding: .2em 2em 0 0 }
 .nuxLinks { float: right; padding-left: 2em }
 .nuxLinks a { vertical-align: middle }
 
