--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/messages_and_tooltips.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/messages_and_tooltips.css
@@ -14,7 +14,7 @@ author: lkemen@nuxeo.com
   border-color: "neutral.light (__FLAVOR__ border)";
   border-width: 1px;
   border-style: solid;
-  border-radius: 0 10px;
+  border-radius: 0 5px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
   color: "black (__FLAVOR__ color)";
   display: block;
@@ -41,6 +41,7 @@ author: lkemen@nuxeo.com
   z-index: 1000 }
 .tips {
   border: 1px dashed;  border-color: "neutral.light (__FLAVOR__ border)";
+  box-shadow: none;
 	color: "gray.medium (__FLAVOR__ color)";
 	padding: 1em;
 	text-align: center }
