NXP-7805 Added automated download of all dependencies (save work in progress)

--- a/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/skin/resources/css/connect_client_style.css
+++ b/nuxeo-admin-center/nuxeo-admin-center/src/main/resources/skin/resources/css/connect_client_style.css
@@ -151,7 +151,7 @@ h3 {
 /* Download screen */
 
 .genericBox {
-  width:500px;
+  width:600px;
   margin:30px auto;
   padding:20px 30px;
   text-align:center;
@@ -246,3 +246,14 @@ ul.installInfo li{
 .alignCenter {
   text-align:center;
   }
+
+.progressDownloadContainer {
+  width:100px;
+  height:10px;
+  background-color:grey;
+  display:none;
+ }
+ .progressDownload {
+  height:8px;
+  background-color:green;
+ }
