--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/basics.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/basics.css
@@ -43,4 +43,4 @@ h4, h5, h6 { color: "title.minor (__FLAVOR__ color)"; font-size: .8em; margin: .
 .half { width:45% } /* used in relationship, to be replaced by halfWidth*/
 .halfWidth { width:45% }
 
-.detail { font-size: .9em; opacity: .9;}
+.detail { font-size: .9em; color: "gray.medium (__FLAVOR__ color)";}
