--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/foldable_boxes.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/foldable_boxes.css
@@ -22,7 +22,7 @@ author: lkemen@nuxeo.com
   background:"neutral.medium (__FLAVOR__ background)" none;
   border-width: 1px; border-style: none none solid;  border-color: "neutral.light (__FLAVOR__ border)";
   color: #555 }
-.foldableBox h3 span, .foldableBox h3 a:link, .foldableBox h3 a:visited, .foldableBox h3 a:hover, .foldableBox h3 a:visited:hover {
+.foldableBox h3 span, .foldableBox h3 a, .foldableBox h3 a:visited, .foldableBox h3 a:hover, .foldableBox h3 a:visited:hover {
   color: "black (__FLAVOR__ color)";
   display: block;
   float: left;
