--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/messages_and_tooltips.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/messages_and_tooltips.css
@@ -25,6 +25,7 @@ author: lkemen@nuxeo.com
 .errorMessage, .errorFeedback { background-color:"warning (__FLAVOR__ background)"; border-color:"error (__FLAVOR__ border)" }
 .warningMessage, .warningFeedback { background-color: "info (__FLAVOR__ background)"; border-color:"warning (__FLAVOR__ border)" }
 .error { color: "warning.status (__FLAVOR__ color)"; font-weight: bold }
+.warningLink { color: "warning.status (__FLAVOR__ color)" }
 
 /* Help messages in forms */
 .help { color: "gray.medium (__FLAVOR__ color)" }
