--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/navigation.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/navigation.css
@@ -10,7 +10,7 @@ author: lkemen@nuxeo.com
 /* =Tabs */
 .tabsBar {
   border-width: 1px; border-style: none none solid;
-  border-color: "neutral.light (__FLAVOR__ border)";
+  border-color: "tabs.selected (__FLAVOR__ border)";
   float: left;
   margin-top: .4em;
   width: 100% }
@@ -23,10 +23,10 @@ author: lkemen@nuxeo.com
   margin: 0 0 -0.1em .3em;
   padding: 0 }
 .tabsBar a,.tabsBar a:visited {
-  background: none "neutral.lighter (__FLAVOR__ background)";
-  border: 1px solid; border-color: "neutral.lighter (__FLAVOR__ border)";
+  background: none "tabs.unselected (__FLAVOR__ background)";
+  border: 1px solid; border-color: "tabs.unselected (__FLAVOR__ border)";
   border-radius: 2px 2px 0 0;
-  color: "gray.dark (__FLAVOR__ color)";
+  color: "tabs.unselected (__FLAVOR__ color)";
   display: block;
   float: left;
   padding: .19em 0.4em;
@@ -34,14 +34,14 @@ author: lkemen@nuxeo.com
 .tabsBar li.selected a,.tabsBar li a:hover,.tabsBar li.selected a:visited {
   background: none repeat scroll 0 0 #fff;
   border: 1px solid;
-  border-color: "neutral.light (__FLAVOR__ border)" "neutral.light (__FLAVOR__ border)" "noborder (__FLAVOR__ border)";
-  color: "black (__FLAVOR__ color)";
+  border-color: "tabs.selected (__FLAVOR__ border)" "tabs.selected (__FLAVOR__ border)" "noborder (__FLAVOR__ border)";
+  color: "tabs.selected (__FLAVOR__ color)";
   padding: .2em .4em .3em }
 
-.subtabsBar {border-style: none none solid; border-width: 1px; border-color: "neutral.lighter (__FLAVOR__ border)"; font-size: .9em}
-.subtabsBar a,.subtabsBar a:visited { color: "gray.dark (__FLAVOR__ color)" }
+.subtabsBar {border-style: none none solid; border-width: 1px; border-color: "subtabs.selected (__FLAVOR__ border)"; font-size: .9em}
+.subtabsBar a,.subtabsBar a:visited { background: none "subtabs.unselected (__FLAVOR__ background)"; color: "subtabs.unselected (__FLAVOR__ color)" }
 .subtabsBar li.selected a,.subtabsBar li a:hover,.subtabsBar li.selected a:visited {
-   border-color: "neutral.lighter (__FLAVOR__ border)" "neutral.lighter (__FLAVOR__ border)" "noborder (__FLAVOR__ border)"; border-style: solid; border-width: 1px; color: "default (__FLAVOR__ color)" }
+   background: none "subtabs.selected (__FLAVOR__ background)"; border-color: "subtabs.selected (__FLAVOR__ border)" "subtabs.selected (__FLAVOR__ border)" "noborder (__FLAVOR__ border)"; border-style: solid; border-width: 1px; color: "subtabs.selected (__FLAVOR__ color)" }
 
 /* =Navigation controls */
 .pageNavigationControls, #pageNavigationControls { border-width: 1px; border-style: none none solid; border-color: "neutral.lighter (__FLAVOR__ border)"; margin: 0 0 .4em; padding: .2em 0 0; text-align: center }
