--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/tables.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/tables.css
@@ -14,7 +14,8 @@ table thead th { padding: .3em; text-align: left }
   border-width: 1px; border-style: none none solid; border-color: "neutral.light (__FLAVOR__ border)";
   color: "gray.dark (__FLAVOR__ color)";
   padding: .6em .3em;
-  text-align: left }
+  text-align: left;
+  white-space: nowrap }
 .dataList thead th a:hover { text-decoration: underline }
 
 .dataInput { margin-top: .4em }
@@ -56,7 +57,7 @@ table.dataOutput th a img { margin: 0 0 0 .2em; padding: 0; vertical-align: bott
 .buttonsGadget { margin: .4em 0 .4em 3.2em }
 .smallButtonsGadget { margin: 0 0 .4em 7em }
 
-.labelColumn { font-weight: bold; vertical-align: top; min-width: 8em; max-width: 18em }
+.labelColumn { font-weight: bold; vertical-align: top; width: 8em }
 .labelColumn span { display: block; padding-right: .7em }
 .workflowLabelColumn { width: 120px }
 
